block dragover and drop in index.html

--- a/controls/vimline/index.html
+++ b/controls/vimline/index.html
@@ -7,6 +7,11 @@
         <!-- Styles -->
         <link rel="stylesheet" href="vimline.css"/>
         <link rel="stylesheet" href="vimline.dark.css"/>
+
+        <script type="text/javascript">
+            window.addEventListener("dragover".function(e){ e.preventDefault(); }, false);
+            window.addEventListener("drop".function(e){ e.preventDefault(); }, false);
+        </script>
     </head>
 
     <body>
